--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body bgcolor="F8E4B7">
     <h1><font color="D4492C"> Odin Recipes </font></h1>
       <ul>
-        <li> <a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/pancakes.html">Pancakes Recipe</a></li>
-        <li><a href="recipes/potatoes au gratin.html">Potatoes au Gratin Recipe</a></li>
+        <li><a href="recipes/lasagna.html" target="_blank">Lasagna Recipe</a></li>
+        <li><a href="recipes/pancakes.html" target="_blank">Pancakes Recipe</a></li>
+        <li><a href="recipes/potatoes_au_gratin.html" target="_blank">Potatoes au Gratin Recipe</a></li>
       </ul>
   </body>
 </html>
